package com.apetrei.engine.input;

public enum InputType {
    UP, DOWN, CONTINUOUS, NULL
}
