@startuml

title __INPUT's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace input {
      class com.apetrei.engine.input.Input {
          ~ pressedKeys : Set<Integer>
          ~ pressedMouseKeys : Set<Integer>
          - inputEventQueue : Queue<InputEvent>
          - mouseX : int
          - mouseY : int
          - scroll : int
          + Input()
          + addInput()
          + getInput()
          + getMouseX()
          + getMouseY()
          + getScroll()
          + isKey()
          + isMouseKeyPressed()
          + keyPressed()
          + keyReleased()
          + keyTyped()
          + mouseClicked()
          + mouseDragged()
          + mouseEntered()
          + mouseExited()
          + mouseMoved()
          + mousePressed()
          + mouseReleased()
          + mouseWheelMoved()
          + nextEvent()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      class com.apetrei.engine.input.InputEvent {
          - event : KeyEvent
          + getEvent()
          + getInputType()
          ~ InputEvent()
          ~ InputEvent()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      enum InputType {
        CONTINUOUS
        DOWN
        NULL
        UP
      }
    }
  }
  

  com.apetrei.engine.input.Input .up.|> java.awt.event.KeyListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseMotionListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseWheelListener
  com.apetrei.engine.input.Input o-- com.apetrei.engine.GameContainer : gameContainer
  com.apetrei.engine.input.InputEvent o-- com.apetrei.engine.input.InputType : inputType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
